# mesh-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/mesh_mcp/: __init__.py  cli.py  server.py
