[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-mcp"
version = "0.1.0"
description = "MCP server for searching and retrieving Medical Subject Headings (MeSH)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
mesh-mcp = "mesh_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
